# lwr_robot

./: README.md
lwr_bringup/: CMakeLists.txt  package.xml
lwr_bringup/config/: deploy.lua
lwr_bringup/launch/: lwr.launch
lwr_bringup/scripts/: kuka_controller.lua  kuka_deploy.lua  traj_deploy.lua
lwr_dashboard/: CMakeLists.txt  package.xml  setup.py
lwr_dashboard/scripts/: __init__.py  cli.ply  cli.py
lwr_dashboard/src/lwr_dashboard/: lwr_dashboard.py
lwr_defs/defs/: kuka_lwr_arm_defs.xml  util_defs.xml
lwr_defs/robots/: kuka_lwr_arm.urdf.xml
lwr_description/: CMakeLists.txt  README.md  package.xml
lwr_description/robots/: kuka_lwr_arm.urdf.xacro
lwr_description/urdf/: lwr.urdf.xacro  lwr_gazebo.urdf.xacro  util.urdf.xacro
lwr_impedance_controller/: CMakeLists.txt  package.xml
lwr_impedance_controller/src/: CartWrench.cpp  CartesianImpedance.cpp  ImpedanceTrajectoryGenerator.cpp  JointLimitsAvoidance.cpp  NullSpaceProjection.cpp  SingularityAvoidance.cpp  SumVectors2.cpp
lwr_simulation/: CMakeLists.txt  README.md  package.xml
lwr_simulation/include/lwr_simulator/: lwr_controller.h
lwr_simulation/launch/: 2lwr_gazebo.launch  lwr_gazebo.launch
lwr_simulation/src/: lwr_controller.cpp
lwr_simulation/srv/: setPayload.srv
rqt_lwr_dashboard/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_lwr_dashboard/scripts/: rqt_lwr_dashboard
rqt_lwr_dashboard/src/rqt_lwr_dashboard/: rqt_lwr_dashboard.py  state_button.py
