<package>
  <name>lwr_description</name>
  <version>0.0.2</version>
  <description>This package contains the description (mechanical, kinematic, visual,
  etc.) of the KUKA LWR robot.</description>
  <maintainer email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</maintainer>

  <license>BSD</license>

  <author>Ingo Kresser</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>xacro</run_depend>

</package>
