<package>
  <name>lwr_impedance_controller</name>
  <version>0.0.1</version>
  <description>	Impedance controller for lwr.</description>
  <maintainer email="konradb3@gmail.com">Konrad Banachowicz</maintainer>

  <license>BSD</license>

  <author>Konrad Banachowicz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>rtt</build_depend>
  <build_depend>rtt_roscomm</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rtt_geometry_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>rtt_ros</build_depend>\
  <build_depend>xeno_clock</build_depend>
  <build_depend>message_runtime</build_depend>
  

  <run_depend>rtt</run_depend>
  <run_depend>rtt_roscomm</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>xeno_clock</run_depend>
  <run_depend>message_runtime</run_depend>
  
  <export>
    <gazebo_ros plugin_path="${prefix}/lib"/>
  </export>

</package>
